initial castor support, better eos support

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -8,7 +8,7 @@ conditionals=gfal macos smu_onsite
 rotations=stken_gsiftp cdfen_gsiftp
 
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot: gsiftp-apple: srm-gfal:
-prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs/ /eos/ /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
+prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs/ /eos/ /castor/ /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/ root://eospublic.cern.ch//eos/ gsiftp://eospublicftp.cern.ch//eos/ root://castorpublic.cern.ch//castor/ gsiftp://castorpublic.cern.ch//castor/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
 
 
 [experiment_vo]
@@ -55,7 +55,27 @@ rename_proto=gsiftp-apple: gsiftp:
 
 [prefix /eos/]
 location=cern_eos
-slashstrip=0
+slashstrip=1
+
+[prefix root://eospublic.cern.ch//eos/]
+location=cern_eos
+slashstrip=4
+
+[prefix gsiftp://eospublicftp.cern.ch//eos/]
+location=cern_eos
+slashstrip=4
+
+[prefix /castor/]
+location=cern_castor
+slashstrip=1
+
+[prefix root://castorpublic.cern.ch//castor/]
+location=cern_castor
+slashstrip=4
+
+[prefix gsiftp://castorpublic.cern.ch//castor/]
+location=cern_castor
+slashstrip=4
 
 [prefix /%(EXPERIMENT_NOLOCK)s/]
 location=bluearc_nolock
@@ -270,8 +290,17 @@ default_doors=stkendca01a.fnal.gov stkendca02a.fnal.gov stkendca03a.fnal.gov stk
 
 [location cern_eos]
 need_cpn_lock=0
-protocols=gsiftp:
-prefix_gsiftp=gsiftp://eospublicftp.cern.ch
+protocols=gsiftp: root:
+prefix_gsiftp=gsiftp://eospublicftp.cern.ch//
+prefix_root=root://eospublic.cern.ch//
+
+[location cern_castor]
+need_cpn_lock=0
+# we don't know of a gridftp door into castor just now...
+#protocols=gsiftp: root:
+#prefix_gsiftp=gsiftp://castorpublic.cern.ch//
+protocols=root:
+prefix_root=root://castorpublic.cern.ch//
 
 [location dcache_stken]
 need_cpn_lock=0
