--- a/ifdh/Makefile
+++ b/ifdh/Makefile
@@ -43,16 +43,16 @@ ifdh_main.cc: h_to_main.sh ifdh.h
 	sh $^ > $@
 
 ifdh: libifdh.$(SHLIB) ifdh_main.o 
-	g++ $(ARCH) -o $@ ifdh_main.o $(ALL_OBJS) $(LDLIBS)
+	${CXX} $(ARCH) -o $@ ifdh_main.o $(ALL_OBJS) $(LDLIBS)
 	./ifdh --help | perl -pe 's{\033\[.*?m}{}g; s{\tifdh ([^ ]*) *(.*?) *$$}{* *ifdh* *$$1* _$$2_}; s{\t--}{** }' > ifdh.textile
 
 python/_ifdh.$(SHLIB): $(PYMOD_OBJS)
 	test -d python || mkdir python 
-	g++ --shared $(ARCH) -o  $@ $(PYMOD_OBJS) $${PYTHON_LIB:-/usr/lib64}/libpython*[asd]* $(LDLIBS) || g++ --shared $(ARCH) -o  $@ $(PYMOD_OBJS) $${PYTHON_LIB:-/usr/lib}/libpython*[asd]* $(LDLIBS)
+	${CXX} --shared $(ARCH) -o  $@ $(PYMOD_OBJS) $${PYTHON_LIB:-/usr/lib64}/libpython*[asd]* $(LDLIBS) || ${CXX} --shared $(ARCH) -o  $@ $(PYMOD_OBJS) $${PYTHON_LIB:-/usr/lib}/libpython*[asd]* $(LDLIBS)
 
 
 libifdh.$(SHLIB): $(ALL_OBJS)
-	g++ --shared $(ARCH) $(CPPFLAGS)  -o $@ $(ALL_OBJS) $(LDLIBS)
+	${CXX} --shared $(ARCH) $(CPPFLAGS)  -o $@ $(ALL_OBJS) $(LDLIBS)
 
 libifdh.a: $(ALL_OBJS)
 	rm -f $@
@@ -68,18 +68,18 @@ ifdh_wrap.cxx: ifdh.i
 	mv ifdh.py python/ifdh.py
 
 ifdh_wrap.o: ifdh_wrap.cxx
-	set -x ; g++ $(SWIGCXXFLAGS) $(ARCH) -c -o $@ $<
+	set -x ; ${CXX} $(SWIGCXXFLAGS) $(ARCH) -c -o $@ $<
         
 ifdh.o: ifdh.h
 
 ifdh.o: ifdh.cc 
-	g++ $(CXXFLAGS) -c -o $@ $<
+	${CXX} $(CXXFLAGS) -c -o $@ $<
 
 ifdh_main.o: ifdh_main.cc
-	g++ $(CXXFLAGS) -c -o $@ ifdh_main.cc
+	${CXX} $(CXXFLAGS) -c -o $@ ifdh_main.cc
 
 %.o: %.cc
-	g++ -c -o $@  $(CXXFLAGS) $< 
+	${CXX} -c -o $@  $(CXXFLAGS) $< 
 
 ifdh_cp.o: ifdh_cp.cc ifdh.h ../util/WebAPI.h ../util/../numsg/numsg.h ../util/../numsg/../util/SyslogAPI.h ../util/regwrap.h
 
