--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -446,7 +446,7 @@ cp_r_cmd=
 need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_SRM_EXTRA
-cp_cmd=gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s
+cp_cmd=gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2
 lss_cmd=gfal-ls -l %(src)s
 lss_skip=0
 lss_size_last=0
