trying to rotate doors for xrootd streaming..

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -3,7 +3,7 @@ EXPERIMENT=(annie|argoneut|auger|btev|captmnv|cdms|cepa|chips|ckm|coupp|cpad|dar
 
 [general]
 conditionals=gfal macos smu_onsite 
-rotations=stken_gsiftp cdfen_gsiftp
+rotations=stken_gsiftp cdfen_gsiftp cdfen_rootd
 
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot: gsiftp-apple: srm-gfal:
 prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs/ /eos/ /castor/ /scratch/users/ /%(EXPERIMENT)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ root://eospublic.cern.ch//eos/ gsiftp://eospublicftp.cern.ch//eos/ root://castorpublic.cern.ch//castor/ gsiftp://castorpublic.cern.ch//castor/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
@@ -264,6 +264,14 @@ prefix_xroot=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
 [rotation stken_gsiftp]
 door_proto=gsiftp
 door_repl_re=gsiftp://(stkendca|fndca)[^/]*.fnal.gov:*[0-9]*
+lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
+# to test timeout code use:
+#lookup_door_uri=http://www.deelay.me/10000/http://fndca.fnal.gov:2288/info/doors
+default_doors=stkendca01a.fnal.gov stkendca02a.fnal.gov stkendca03a.fnal.gov stkendca04a.fnal.gov stkendca05a.fnal.gov stkendca06a.fnal.gov stkendca11a.fnal.gov stkendca12a.fnal.gov stkendca13a.fnal.gov stkendca14a.fnal.gov stkendca15a.fnal.gov stkendca16a.fnal.gov stkendca19a.fnal.gov stkendca20a.fnal.gov stkendca25a.fnal.gov stkendca26a.fnal.gov stkendca27a.fnal.gov stkendca28a.fnal.gov stkendca31a.fnal.gov stkendca32a.fnal.gov stkendca33a.fnal.gov stkendca34a.fnal.gov stkendca35a.fnal.gov stkendca36a.fnal.gov stkendca37a.fnal.gov stkendca38a.fnal.gov stkendca39a.fnal.gov stkendca40a.fnal.gov stkendca41a.fnal.gov stkendca42a.fnal.gov stkendca43a.fnal.gov stkendca44a.fnal.gov stkendca45a.fnal.gov stkendca46a.fnal.gov stkendca47a.fnal.gov stkendca48a.fnal.gov stkendca49a.fnal.gov stkendca50a.fnal.gov stkendca51a.fnal.gov stkendca52a.fnal.gov stkendca60a.fnal.gov
+
+[rotation stken_rootd]
+door_proto=rootd
+door_repl_re=rootd://(stkendca|fndca)[^/]*.fnal.gov:*[0-9]*
 lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
 # to test timeout code use:
 #lookup_door_uri=http://www.deelay.me/10000/http://fndca.fnal.gov:2288/info/doors
