--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -198,6 +198,7 @@ prefix_srm=file:///
 [location bluearc]
 need_cpn_lock=0
 protocols=file: gsiftp: srm:
+ignore_url_proto=true
 prefix_file=
 prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
 prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
