--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -3,7 +3,7 @@ EXPERIMENT=(annie|argoneut|auger|btev|captmnv|cdms|cepa|chips|ckm|coupp|cpad|dar
 
 [general]
 conditionals=gfal macos smu_onsite 
-rotations=stken_gsiftp cdfen_gsiftp cdfen_rootd
+rotations=stken_gsiftp cdfen_gsiftp
 
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot: gsiftp-apple: srm-gfal:
 prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs/ /eos/ /castor/ /scratch/users/ /%(EXPERIMENT)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ root://eospublic.cern.ch//eos/ gsiftp://eospublicftp.cern.ch//eos/ root://castorpublic.cern.ch//castor/ gsiftp://castorpublic.cern.ch//castor/ gsiftp://fg-bestman1.fnal.gov:2811/%(EXPERIMENT)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
@@ -23,7 +23,7 @@ match5=(.*)
 repl5=fermilab:/fermilab/$1
 
 [gid_exp]
-gidexplist=annie auger darkside des dune gm2 larp lsst minerva minos minosplus mu2e next nova seaquest uboone 
+gidexplist=annie auger darkside des dune gm2 larp lsst minerva minos minosplus mu2e next nova seaquest uboone
 gids_annie=	9467
 gids_auger=	5314
 gids_darkside=  9985
@@ -77,15 +77,15 @@ slashstrip=4
 
 [prefix gsiftp://fg-bestman1.fnal.gov:2811/%(EXPERIMENT)s/]
 location=bluearc
-slashstrip=0
+slashstrip=3
 
 [prefix /%(EXPERIMENT)s/]
 location=bluearc
-slashstrip=0
+slashstrip=1
 
 [prefix /grid/(app|data|fermiapp)/%(EXPERIMENT)s/]
 location=bluearc
-slashstrip=0
+slashstrip=1
 
 [prefix /]
 location=local_fs
@@ -203,11 +203,11 @@ prefix_srm=file:///
 need_cpn_lock=0
 protocols=file: gsiftp: srm:
 ignore_url_proto=true
-prefix_file=
-prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
-prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
-can_stat_gsiftp=file://
-can_stat_srm=file://
+prefix_file=/
+prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811/
+prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=/
+can_stat_gsiftp=file:///
+can_stat_srm=file:///
 
 [prefix i://]
 location = generic_irods
