--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -6,7 +6,7 @@ conditionals=gfal macos smu_onsite
 rotations=stken_gsiftp cdfen_gsiftp
 
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot: gsiftp-apple: srm-gfal:
-prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs/ /eos/ /castor/ /scratch/users/ root://eospublic.cern.ch//eos/ gsiftp://eospublicftp.cern.ch//eos/ root://castorpublic.cern.ch//castor/ gsiftp://castorpublic.cern.ch//castor/ gsiftp://fg-bestman1.fnal.gov:2811/ gsiftp://fg-bestman1.fnal.gov/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
+prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ gsiftp://lxse-dr01.jinr.ru/pnfs/jinr.ru/ /pnfs/jinr.ru/ /pnfs/ /eos/ /castor/ /scratch/users/ root://eospublic.cern.ch//eos/ gsiftp://eospublicftp.cern.ch//eos/ root://castorpublic.cern.ch//castor/ gsiftp://castorpublic.cern.ch//castor/ gsiftp://fg-bestman1.fnal.gov:2811/ gsiftp://fg-bestman1.fnal.gov/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
 
 
 [experiment_vo]
@@ -52,6 +52,14 @@ rename_proto=gsiftp-apple: gsiftp:
 
 [prefix /eos/]
 location=cern_eos
+slashstrip=1
+
+[prefix gsiftp://lxse-dc01.jinr.ru/pnfs/jinr.ru/]
+location=dcache_jinr_ru
+slashstrip=3
+
+[prefix /pnfs/jinr.ru/]
+location=dcache_jinr_ru
 slashstrip=1
 
 [prefix gsiftp://fg-bestman1.fnal.gov:2811/]
@@ -310,6 +318,18 @@ need_cpn_lock=0
 #prefix_gsiftp=gsiftp://castorpublic.cern.ch//
 protocols=root:
 prefix_root=root://castorpublic.cern.ch//
+
+[location dcache_jinr_ru]
+need_cpn_lock=0
+protocols=gsiftp: srm: root: https: 
+#lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
+#door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
+prefix_file=/pnfs/
+prefix_gsiftp=gsiftp://lxse-dr01.jinr.ru:2811/
+prefix_srm=srm://lxse-dc01.jinr.ru:8443/srm/managerv2?SFN=/
+prefix_root=root://lcgsedr01.jinr.ru:1094/
+prefix_xroot=root://lcgsedr01.jinr.ru:1094/
+prefix_https=https://lcgsedr07.jinr.ru:2880/
 
 [location dcache_stken]
 need_cpn_lock=0
