--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -6,7 +6,7 @@ conditionals=gfal macos smu_onsite
 rotations=stken_gsiftp cdfen_gsiftp
 
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot: gsiftp-apple: srm-gfal:
-prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ gsiftp://lxse-dr01.jinr.ru/pnfs/jinr.ru/ /pnfs/jinr.ru/ /pnfs/ /eos/ /castor/ /scratch/users/ root://eospublic.cern.ch//eos/ gsiftp://eospublicftp.cern.ch//eos/ root://castorpublic.cern.ch//castor/ gsiftp://castorpublic.cern.ch//castor/ gsiftp://fg-bestman1.fnal.gov:2811/ gsiftp://fg-bestman1.fnal.gov/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
+prefixes= D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ gsiftp://lxse-dr01.jinr.ru/pnfs/jinr.ru/ /pnfs/jinr.ru/ /pnfs/ /eos/ /castor/ /scratch/users/ root://eospublic.cern.ch//eos/ gsiftp://eospublicftp.cern.ch//eos/ root://castorpublic.cern.ch//castor/ gsiftp://castorpublic.cern.ch//castor/ gsiftp://fg-bestman1.fnal.gov:2811/ gsiftp://fg-bestman1.fnal.gov/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
 
 
 [experiment_vo]
@@ -54,7 +54,7 @@ rename_proto=gsiftp-apple: gsiftp:
 location=cern_eos
 slashstrip=1
 
-[prefix gsiftp://lxse-dc01.jinr.ru/pnfs/jinr.ru/]
+[prefix gsiftp://lxse-dr01.jinr.ru/pnfs/jinr.ru/]
 location=dcache_jinr_ru
 slashstrip=3
 
@@ -89,6 +89,10 @@ slashstrip=4
 [prefix gsiftp://castorpublic.cern.ch//castor/]
 location=cern_castor
 slashstrip=4
+
+#[prefix /unused]
+#location=local_fs
+#slashstrip=0
 
 [prefix /]
 location=local_fs_1
