--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -10,17 +10,15 @@ prefixes= D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ gsift
 
 
 [experiment_vo]
-numrules=5
-match1=(lbne|cdf|lsst|fermilab|dune|des)
+numrules=4
+match1=(lsst|fermilab|dune|des)
 repl1=$1:/$1
-match2=dzero
-repl2=$1:/$1/users
-match3=mars(.*)
-repl3=fermilab:/fermilab/mars/$1
-match4=samdev
-repl4=fermilab:/fermilab
-match5=(.*)
-repl5=fermilab:/fermilab/$1
+match2=mars(.*)
+repl2=fermilab:/fermilab/mars/$1
+match3=samdev
+repl3=fermilab:/fermilab
+match4=(.*)
+repl4=fermilab:/fermilab/$1
 
 [gid_exp]
 gidexplist=annie auger darkside des dune gm2 larp lsst minerva minos minosplus mu2e next nova seaquest uboone
