larsoft env with PYTHONHOME confuses gfal tools, so unset it

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -496,19 +496,19 @@ cp_r_cmd=
 need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_SRM_EXTRA
-cp_cmd=(exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
-lss_cmd=gfal-ls -l %(src)s
+cp_cmd=(unset PYTHONHOME; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
+lss_cmd=unset PYTHONHOME; gfal-ls -l %(src)s
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
 lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/ 	]*)[ 	]*$
-ll_cmd=gfal-ls -l %(src)s
-mv_cmd=gfal-rename %(src)s %(dst)s
-chmod_cmd=gfal-chmod %(mode)s %(src)s
-mkdir_cmd=gfal-mkdir %(src)s
-rm_cmd=gfal-rm %(src)s
-rmdir_cmd=gfal-rm -r %(src)s
-pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
+ll_cmd=unset PYTHONHOME; gfal-ls -l %(src)s
+mv_cmd=PYTHONHOME=  PYTHONPATH= gfal-rename %(src)s %(dst)s
+chmod_cmd=unset PYTHONHOME; gfal-chmod %(mode)s %(src)s
+mkdir_cmd=unset PYTHONHOME; gfal-mkdir %(src)s
+rm_cmd=unset PYTHONHOME; gfal-rm %(src)s
+rmdir_cmd=unset PYTHONHOME; gfal-rm -r %(src)s
+pin_cmd=PYTHONHOME= srm-bring-online --lifetime=%(secs)s %(src)s
 cp_r_cmd=
 
 
