fail properly if not a git checkout

--- a/util/Makefile
+++ b/util/Makefile
@@ -19,7 +19,7 @@ clean:
 # overwrite version.h with actual git version if git describe works
 # otherwise leave it (i.e. for exported code)
 ifdh_version.h: FORCE
-	echo '#define IFDH_VERSION "'`git describe --tags --match 'v*'`'"' > $@.new && mv $@.new $@ || true
+	git describe --tags --match 'v*' 2>/dev/null && echo '#define IFDH_VERSION "'`git describe --tags --match 'v*'`'"' > $@.new && mv $@.new $@ || true
 
 FORCE:
 
