support ll for --force=https

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -218,10 +218,7 @@ can_stat_f=/
 
 [location local_fs_1]
 need_cpn_lock=0
-# was:
-# protocols=file:
-# do we need this?
-protocols=file: srm: gsiftp: http: https: s3: ucondb: gs: root:
+protocols=file:
 prefix_file=
 prefix_http=
 prefix_https=
@@ -596,7 +593,7 @@ lss_dir_last=1
 lss_re1 = (/.*/)([^/]*)\s([0-9]+)\s*$
 mv_cmd=www_cp.sh --mv %(src)s %(dst)s
 cp_r_cmd=
-ll_cmd=
+ll_cmd=www_cp.sh --ll %(r)s %(src)s
 chmod_cmd=
 rm_cmd=
 rmdir_cmd=
