srm defaults to gfal now

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -40,10 +40,6 @@ gids_nova=	1004  9553
 gids_seaquest=	6269 8975
 gids_uboone=	9257 9258 9259 9260 9261 9262 9937 9952
 
-[conditional gfal]
-test=-x /usr/bin/gfal-copy
-rename_proto=srm-gfal: srm:
-
 [conditional macos]
 test=-x /usr/bin/update_dyld_shared_cache
 rename_proto=gsiftp-apple: gsiftp:
@@ -470,26 +466,26 @@ rm_cmd=uberftp -rm  %(src)s
 rmdir_cmd=uberftp -rmdir  %(src)s
 pin_cmd=
 
-[protocol srm:]
-need_proxy=1
-strip_file_prefix=0
-extra_env=IFDH_SRM_EXTRA
-cp_cmd=lcg-cp  --sendreceive-timeout 14400 -b -D srmv2 %(extra)s %(src)s %(dst)s
-lss_cmd=srmls -2 -count=8192 %(src)s
-lss_skip=0
-lss_size_last=0
-lss_dir_last=1
-lss_re1 = \s*([0-9]+)\s(/.*/)([^ /]*)(/?) *$
-ll_cmd=srmls -2 -count=8192 --recursion_depth=%(recursion_depth) --long %(src)s
-mv_cmd=srmmv -2 %(src)s %(dst)s
-chmod_cmd=srm-set-permissions --owner=%(obits)s --group=%(gbits)s --other=%(obits)s %(src)s
-mkdir_cmd=srmmkdir %(src)s
-rm_cmd=srmrm %(src)s
-rmdir_cmd=srmrmdir %(src)s
-pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
-cp_r_cmd=
+#[protocol srm:]
+#need_proxy=1
+#strip_file_prefix=0
+#extra_env=IFDH_SRM_EXTRA
+#cp_cmd=lcg-cp  --sendreceive-timeout 14400 -b -D srmv2 %(extra)s %(src)s %(dst)s
+#lss_cmd=srmls -2 -count=8192 %(src)s
+#lss_skip=0
+#lss_size_last=0
+#lss_dir_last=1
+#lss_re1 = \s*([0-9]+)\s(/.*/)([^ /]*)(/?) *$
+#ll_cmd=srmls -2 -count=8192 --recursion_depth=%(recursion_depth) --long %(src)s
+#mv_cmd=srmmv -2 %(src)s %(dst)s
+#chmod_cmd=srm-set-permissions --owner=%(obits)s --group=%(gbits)s --other=%(obits)s %(src)s
+#mkdir_cmd=srmmkdir %(src)s
+#rm_cmd=srmrm %(src)s
+#rmdir_cmd=srmrmdir %(src)s
+#pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
+#cp_r_cmd=
 
-[protocol srm-gfal:]
+[protocol srm:]
 need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_SRM_EXTRA
@@ -507,7 +503,6 @@ rm_cmd=unset PYTHONHOME; gfal-rm %(src)s
 rmdir_cmd=unset PYTHONHOME; gfal-rm -r %(src)s
 pin_cmd=PYTHONHOME= srm-bring-online --lifetime=%(secs)s %(src)s
 cp_r_cmd=
-
 
 [protocol root:]
 need_proxy=1
