move info/doors to https access

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -239,7 +239,7 @@ prefix_i=
 [rotation cdfen_gsiftp]
 door_proto=gsiftp
 door_repl_re=gsiftp://(cdfdca1|fcdfdcache)[^/]*.fnal.gov
-lookup_door_uri=http://cdfdca.fnal.gov:2288/info/doors
+#lookup_door_uri=http://cdfdca.fnal.gov:2288/info/doors
 default_doors= fcdfdcache21.fnal.gov fcdfdcache22.fnal.gov fcdfdcache23.fnal.gov
 
 [location dcache_cdfen]
@@ -287,7 +287,7 @@ prefix_xroot=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
 [rotation stken_gsiftp]
 door_proto=gsiftp
 door_repl_re=gsiftp://(stkendca|fndca)[^/]*.fnal.gov:*[0-9]*
-lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
+lookup_door_uri=https://fndca.fnal.gov/info/doors
 # to test timeout code use:
 #lookup_door_uri=http://www.deelay.me/10000/http://fndca.fnal.gov:2288/info/doors
 default_doors=stkendca11a.fnal.gov stkendca12a.fnal.gov stkendca13a.fnal.gov stkendca14a.fnal.gov stkendca15a.fnal.gov stkendca16a.fnal.gov stkendca19a.fnal.gov stkendca20a.fnal.gov stkendca25a.fnal.gov stkendca26a.fnal.gov stkendca27a.fnal.gov stkendca28a.fnal.gov stkendca31a.fnal.gov stkendca32a.fnal.gov stkendca33a.fnal.gov stkendca34a.fnal.gov stkendca35a.fnal.gov stkendca36a.fnal.gov stkendca37a.fnal.gov stkendca38a.fnal.gov stkendca39a.fnal.gov stkendca40a.fnal.gov stkendca41a.fnal.gov stkendca42a.fnal.gov stkendca43a.fnal.gov stkendca44a.fnal.gov stkendca45a.fnal.gov stkendca46a.fnal.gov stkendca47a.fnal.gov stkendca48a.fnal.gov stkendca49a.fnal.gov stkendca50a.fnal.gov stkendca60a.fnal.gov
@@ -295,7 +295,7 @@ default_doors=stkendca11a.fnal.gov stkendca12a.fnal.gov stkendca13a.fnal.gov stk
 [rotation stken_rootd]
 door_proto=rootd
 door_repl_re=rootd://(stkendca|fndca)[^/]*.fnal.gov:*[0-9]*
-lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
+lookup_door_uri=https://fndca.fnal.gov/info/doors
 # to test timeout code use:
 #lookup_door_uri=http://www.deelay.me/10000/http://fndca.fnal.gov:2288/info/doors
 default_doors=stkendca11a.fnal.gov stkendca12a.fnal.gov stkendca13a.fnal.gov stkendca14a.fnal.gov stkendca15a.fnal.gov stkendca16a.fnal.gov stkendca19a.fnal.gov stkendca20a.fnal.gov stkendca25a.fnal.gov stkendca26a.fnal.gov stkendca27a.fnal.gov stkendca28a.fnal.gov stkendca31a.fnal.gov stkendca32a.fnal.gov stkendca33a.fnal.gov stkendca34a.fnal.gov stkendca35a.fnal.gov stkendca36a.fnal.gov stkendca37a.fnal.gov stkendca38a.fnal.gov stkendca39a.fnal.gov stkendca40a.fnal.gov stkendca41a.fnal.gov stkendca42a.fnal.gov stkendca43a.fnal.gov stkendca44a.fnal.gov stkendca45a.fnal.gov stkendca46a.fnal.gov stkendca47a.fnal.gov stkendca48a.fnal.gov stkendca49a.fnal.gov stkendca50a.fnal.gov stkendca60a.fnal.gov
@@ -329,7 +329,7 @@ prefix_https=https://lcgsedr07.jinr.ru:2880/
 [location dcache_stken]
 need_cpn_lock=0
 protocols=gsiftp: srm: root: https: 
-lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
+lookup_door_uri=https://fndca.fnal.gov/info/doors
 door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://fndca1.fnal.gov/pnfs/fnal.gov/usr/
