config file updates: srm fixup, https door/info

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -40,10 +40,6 @@ gids_nova=	1004  9553
 gids_seaquest=	6269 8975
 gids_uboone=	9257 9258 9259 9260 9261 9262 9937 9952
 
-[conditional gfal]
-test=-x /usr/bin/gfal-copy
-rename_proto=srm-gfal: srm:
-
 [conditional macos]
 test=-x /usr/bin/update_dyld_shared_cache
 rename_proto=gsiftp-apple: gsiftp:
@@ -218,10 +214,7 @@ can_stat_f=/
 
 [location local_fs_1]
 need_cpn_lock=0
-# was:
-# protocols=file:
-# do we need this?
-protocols=file: srm: gsiftp: http: https: s3: ucondb: gs: root:
+protocols=file:
 prefix_file=
 prefix_http=
 prefix_https=
@@ -246,7 +239,7 @@ prefix_i=
 [rotation cdfen_gsiftp]
 door_proto=gsiftp
 door_repl_re=gsiftp://(cdfdca1|fcdfdcache)[^/]*.fnal.gov
-lookup_door_uri=http://cdfdca.fnal.gov:2288/info/doors
+#lookup_door_uri=http://cdfdca.fnal.gov:2288/info/doors
 default_doors= fcdfdcache21.fnal.gov fcdfdcache22.fnal.gov fcdfdcache23.fnal.gov
 
 [location dcache_cdfen]
@@ -294,7 +287,7 @@ prefix_xroot=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
 [rotation stken_gsiftp]
 door_proto=gsiftp
 door_repl_re=gsiftp://(stkendca|fndca)[^/]*.fnal.gov:*[0-9]*
-lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
+lookup_door_uri=https://fndca.fnal.gov/info/doors
 # to test timeout code use:
 #lookup_door_uri=http://www.deelay.me/10000/http://fndca.fnal.gov:2288/info/doors
 default_doors=stkendca11a.fnal.gov stkendca12a.fnal.gov stkendca13a.fnal.gov stkendca14a.fnal.gov stkendca15a.fnal.gov stkendca16a.fnal.gov stkendca19a.fnal.gov stkendca20a.fnal.gov stkendca25a.fnal.gov stkendca26a.fnal.gov stkendca27a.fnal.gov stkendca28a.fnal.gov stkendca31a.fnal.gov stkendca32a.fnal.gov stkendca33a.fnal.gov stkendca34a.fnal.gov stkendca35a.fnal.gov stkendca36a.fnal.gov stkendca37a.fnal.gov stkendca38a.fnal.gov stkendca39a.fnal.gov stkendca40a.fnal.gov stkendca41a.fnal.gov stkendca42a.fnal.gov stkendca43a.fnal.gov stkendca44a.fnal.gov stkendca45a.fnal.gov stkendca46a.fnal.gov stkendca47a.fnal.gov stkendca48a.fnal.gov stkendca49a.fnal.gov stkendca50a.fnal.gov stkendca60a.fnal.gov
@@ -302,7 +295,7 @@ default_doors=stkendca11a.fnal.gov stkendca12a.fnal.gov stkendca13a.fnal.gov stk
 [rotation stken_rootd]
 door_proto=rootd
 door_repl_re=rootd://(stkendca|fndca)[^/]*.fnal.gov:*[0-9]*
-lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
+lookup_door_uri=https://fndca.fnal.gov/info/doors
 # to test timeout code use:
 #lookup_door_uri=http://www.deelay.me/10000/http://fndca.fnal.gov:2288/info/doors
 default_doors=stkendca11a.fnal.gov stkendca12a.fnal.gov stkendca13a.fnal.gov stkendca14a.fnal.gov stkendca15a.fnal.gov stkendca16a.fnal.gov stkendca19a.fnal.gov stkendca20a.fnal.gov stkendca25a.fnal.gov stkendca26a.fnal.gov stkendca27a.fnal.gov stkendca28a.fnal.gov stkendca31a.fnal.gov stkendca32a.fnal.gov stkendca33a.fnal.gov stkendca34a.fnal.gov stkendca35a.fnal.gov stkendca36a.fnal.gov stkendca37a.fnal.gov stkendca38a.fnal.gov stkendca39a.fnal.gov stkendca40a.fnal.gov stkendca41a.fnal.gov stkendca42a.fnal.gov stkendca43a.fnal.gov stkendca44a.fnal.gov stkendca45a.fnal.gov stkendca46a.fnal.gov stkendca47a.fnal.gov stkendca48a.fnal.gov stkendca49a.fnal.gov stkendca50a.fnal.gov stkendca60a.fnal.gov
@@ -336,7 +329,7 @@ prefix_https=https://lcgsedr07.jinr.ru:2880/
 [location dcache_stken]
 need_cpn_lock=0
 protocols=gsiftp: srm: root: https: 
-lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
+lookup_door_uri=https://fndca.fnal.gov/info/doors
 door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://fndca1.fnal.gov/pnfs/fnal.gov/usr/
@@ -473,26 +466,26 @@ rm_cmd=uberftp -rm  %(src)s
 rmdir_cmd=uberftp -rmdir  %(src)s
 pin_cmd=
 
-[protocol srm:]
-need_proxy=1
-strip_file_prefix=0
-extra_env=IFDH_SRM_EXTRA
-cp_cmd=lcg-cp  --sendreceive-timeout 14400 -b -D srmv2 %(extra)s %(src)s %(dst)s
-lss_cmd=srmls -2 -count=8192 %(src)s
-lss_skip=0
-lss_size_last=0
-lss_dir_last=1
-lss_re1 = \s*([0-9]+)\s(/.*/)([^ /]*)(/?) *$
-ll_cmd=srmls -2 -count=8192 --recursion_depth=%(recursion_depth) --long %(src)s
-mv_cmd=srmmv -2 %(src)s %(dst)s
-chmod_cmd=srm-set-permissions --owner=%(obits)s --group=%(gbits)s --other=%(obits)s %(src)s
-mkdir_cmd=srmmkdir %(src)s
-rm_cmd=srmrm %(src)s
-rmdir_cmd=srmrmdir %(src)s
-pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
-cp_r_cmd=
+#[protocol srm:]
+#need_proxy=1
+#strip_file_prefix=0
+#extra_env=IFDH_SRM_EXTRA
+#cp_cmd=lcg-cp  --sendreceive-timeout 14400 -b -D srmv2 %(extra)s %(src)s %(dst)s
+#lss_cmd=srmls -2 -count=8192 %(src)s
+#lss_skip=0
+#lss_size_last=0
+#lss_dir_last=1
+#lss_re1 = \s*([0-9]+)\s(/.*/)([^ /]*)(/?) *$
+#ll_cmd=srmls -2 -count=8192 --recursion_depth=%(recursion_depth) --long %(src)s
+#mv_cmd=srmmv -2 %(src)s %(dst)s
+#chmod_cmd=srm-set-permissions --owner=%(obits)s --group=%(gbits)s --other=%(obits)s %(src)s
+#mkdir_cmd=srmmkdir %(src)s
+#rm_cmd=srmrm %(src)s
+#rmdir_cmd=srmrmdir %(src)s
+#pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
+#cp_r_cmd=
 
-[protocol srm-gfal:]
+[protocol srm:]
 need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_SRM_EXTRA
@@ -510,7 +503,6 @@ rm_cmd=unset PYTHONHOME; gfal-rm %(src)s
 rmdir_cmd=unset PYTHONHOME; gfal-rm -r %(src)s
 pin_cmd=PYTHONHOME= srm-bring-online --lifetime=%(secs)s %(src)s
 cp_r_cmd=
-
 
 [protocol root:]
 need_proxy=1
@@ -596,7 +588,7 @@ lss_dir_last=1
 lss_re1 = (/.*/)([^/]*)\s([0-9]+)\s*$
 mv_cmd=www_cp.sh --mv %(src)s %(dst)s
 cp_r_cmd=
-ll_cmd=
+ll_cmd=www_cp.sh --ll %(r)s %(src)s
 chmod_cmd=
 rm_cmd=
 rmdir_cmd=
