--- a/ifdh/Makefile
+++ b/ifdh/Makefile
@@ -21,8 +21,9 @@ SWIGCXXFLAGS=-fPIC -I../util -I../numsg -I../../util -I../../numsg -I../../ifdh 
 CXXFLAGS=-pedantic-errors -Wall -Wextra -Werror -fPIC -I../../util -I../util -I ../../numsg -I../numsg -g  $(ARCH) -I$(SRCDIR)
 OBJ=ifdh.o ifdh_cp.o
 ALL_OBJS=$(OBJ) ../util/WebAPI.o ../numsg/numsg.o ../util/SyslogAPI.o ../util/utils.o ../util/regwrap.o ../util/Checksum.o ../util/md5.o ../util/WimpyConfigParser.o
-genOBJ=ifdh_main.o ifdh_wrap.o python/ifdh.$(SHLIB)
-genSRC=ifdh_wrap.cxx ifdh_main.cc
+genOBJ=ifdh_main.o python/ifdh.$(SHLIB)
+genSRC=ifdh_main.cc
+#genSRC=ifdh_pybindgen.cc ifdh_main.cc
 PYMOD_OBJS=$(ALL_OBJS) ifdh_pybindgen.o
 ifeq ($(UNAME),Darwin)
 LDLIBS=-lz
@@ -82,17 +83,6 @@ libifdh.a: $(ALL_OBJS)
 	ar qv $@ $(ALL_OBJS)
 	ranlib $@ 
 
-ifdh_wrap.cxx: ifdh.h 
-
-ifdh_wrap.cxx: ifdh.i 
-	test -d python || mkdir python
-	swig $(SWIGOPTS) -python -c++ -o ifdh_wrap.cxx $< || (cp ifdh_wrap.cxx.$(FALLBACK) ifdh_wrap.cxx && cp ifdh.py.fallback ifdh.py)
-	set -x ; python -V 2>&1 | grep ' 2.[67]' > /dev/null && rpm -qf /usr/bin/swig | grep 1.3.[42][90] && (patch -p0 < ifdh_wrap.patch ||  patch -p0 < ../../ifdh/ifdh_wrap.patch) || true
-	mv ifdh.py python/ifdh.py
-
-ifdh_wrap.o: ifdh_wrap.cxx
-	set -x ; ${CXX} $(SWIGCXXFLAGS) $(ARCH) -c -o $@ $<
-        
 ifdh.o: ifdh.h
 
 ifdh.o: ifdh.cc 
