--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -6,7 +6,7 @@ conditionals=macos smu_onsite
 rotations=stken_gsiftp cdfen_gsiftp
 
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot: gsiftp-apple:
-prefixes= D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ gsiftp://lxse-dr01.jinr.ru/pnfs/jinr.ru/ /pnfs/jinr.ru/ /pnfs/ /eos/ /castor/ /scratch/users/ root://eospublic.cern.ch//eos/ gsiftp://eospublicftp.cern.ch//eos/ root://castorpublic.cern.ch//castor/ gsiftp://castorpublic.cern.ch//castor/ gsiftp://fg-bestman1.fnal.gov:2811/ gsiftp://fg-bestman1.fnal.gov/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
+prefixes= D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ gsiftp://lxse-dr01.jinr.ru/pnfs/jinr.ru/ /pnfs/jinr.ru/ /pnfs/ /eos/ /castor/ /scratch/users/ root://eospublic.cern.ch//eos/ gsiftp://eospublicftp.cern.ch//eos/ root://castorpublic.cern.ch//castor/ gsiftp://castorpublic.cern.ch//castor/ gsiftp://fg-bestman1.fnal.gov:2811/ gsiftp://fg-bestman1.fnal.gov/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
 
 
 [experiment_vo]
@@ -186,27 +186,26 @@ prefix_srm=file:////
 can_stat_gsiftp=file:////
 can_stat_file=/
 
-[location local_fs]
-need_cpn_lock=0
-# was:
-# protocols=file:
-# do we need this?
-protocols=file: srm: gsiftp: http: https: s3: ucondb: gs: root:
-prefix_file=/
-prefix_http=/
-prefix_https=/
-prefix_root=/
-prefix_s3=/
-prefix_gs=/
-prefix_ucondb=/
-prefix_gsiftp=file:////
-prefix_srm=file:////
-can_stat_file=/
-can_stat_f=/
+#[location local_fs]
+#need_cpn_lock=0
+## was:
+## protocols=file:
+## do we need this?  Yes!
+#protocols=file: srm: gsiftp: http: https: s3: ucondb: gs: root:
+#prefix_file=/
+#prefix_http=/
+#prefix_https=/
+#prefix_root=/
+#prefix_s3=/
+#prefix_gs=/
+#prefix_ucondb=/
+#prefix_gsiftp=file:////
+#prefix_srm=file:////
+#can_stat_file=/
 
 [location local_fs_1]
 need_cpn_lock=0
-protocols=file:
+protocols=file: srm: gsiftp: http: https: s3: ucondb: gs: root:
 prefix_file=
 prefix_http=
 prefix_https=
@@ -231,7 +230,7 @@ prefix_i=
 [rotation cdfen_gsiftp]
 door_proto=gsiftp
 door_repl_re=gsiftp://(cdfdca1|fcdfdcache)[^/]*.fnal.gov
-#lookup_door_uri=http://cdfdca.fnal.gov:2288/info/doors
+lookup_door_uri=-
 default_doors= fcdfdcache21.fnal.gov fcdfdcache22.fnal.gov fcdfdcache23.fnal.gov
 
 [location dcache_cdfen]
@@ -379,6 +378,7 @@ lss_size_last=0
 lss_dir_last=0
 lss_skip=0
 lss_cmd=find %(src)s -maxdepth 1 -ls
+lss_cmd_lists_dir=1
 ll_cmd=find %(src)s -maxdepth %(recursion_depth)s -ls
 lss_re1 = \s*[0-9]*\s*[0-9]*\s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*([0-9]*)\s[A-Z].{11}\s*()([^/]*)\s*$
 lss_re2 = \s*[0-9]*\s*[0-9]*\s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s*[A-Z].{11}\s*(/.*/)([^/]*)\s*$
@@ -397,6 +397,7 @@ strip_file_prefix=1
 extra_env=IFDH_IROOTD_EXTRA
 cp_cmd=icp %(extra)s %(src)s %(dst)s
 lss_cmd=ils  %(src)s
+lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
@@ -419,6 +420,7 @@ extra_env2=IFDH_GSIFTP_EXTRA
 cp_cmd=globus-url-copy -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 %(extra)s %(src)s %(dst)s
 cp_r_cmd=globus-url-copy -cd -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 -r %(extra)s %(src)s/ %(dst)s/
 lss_cmd=globus-url-copy -list %(src)s
+lss_cmd_lists_dir=0
 lss_fake_popen = 1
 lss_skip=1
 lss_size_last=0
@@ -441,6 +443,7 @@ strip_file_prefix=0
 cp_cmd=globus-url-copy -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 %(extra)s %(src)s %(dst)s
 cp_r_cmd=globus-url-copy -cd -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 -r %(extra)s %(src)s/ %(dst)s/
 lss_cmd=uberftp -ls %(src)s
+lss_cmd_lists_dir=0
 # remember to take this back out...
 lss_fake_popen = 1
 lss_skip=0
@@ -462,6 +465,7 @@ pin_cmd=
 #extra_env=IFDH_SRM_EXTRA
 #cp_cmd=lcg-cp  --sendreceive-timeout 14400 -b -D srmv2 %(extra)s %(src)s %(dst)s
 #lss_cmd=srmls -2 -count=8192 %(src)s
+#lss_cmd_lists_dir=0
 #lss_skip=0
 #lss_size_last=0
 #lss_dir_last=1
@@ -481,6 +485,7 @@ strip_file_prefix=0
 extra_env=IFDH_SRM_EXTRA
 cp_cmd=(unset PYTHONHOME; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
 lss_cmd=unset PYTHONHOME; gfal-ls -l %(src)s
+#lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
@@ -502,6 +507,7 @@ extra_env2=IFDH_XROOT_EXTRA
 #cp_cmd=xrdcp –DIRedirectLimit 255 -DIRequestTimeout 14400 --tpc first --force %(extra)s %(src)s %(dst)s
 cp_cmd=xrdcp -DIRequestTimeout 14400 --tpc first --force  %(extra)s %(src)s %(dst)s
 lss_cmd=xrdwrap.sh ls -l %(src)s
+lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
@@ -526,6 +532,7 @@ extra_env=IFDH_GS_EXTRA
 cp_cmd=gsutil cp  %(extra)s %(src)s %(dst)s
 cp_r_cmd=gsutil cp -r %(extra)s %(src)s %(dst)s
 lss_cmd=gsutil ls %(src)s
+lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=0
 lss_dir_last=1
@@ -549,6 +556,7 @@ extra_env=IFDH_S3_EXTRA
 cp_cmd=aws s3 cp  %(extra)s %(src)s %(dst)s
 cp_r_cmd=aws s3 cp --recursive %(extra)s %(src)s %(dst)s
 lss_cmd=aws s3 ls %(src)s
+lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=0
 lss_dir_last=1
@@ -571,6 +579,7 @@ extra_env=IFDH_HTTPS_EXTRA
 extra_env2=IFDH_CURL_EXTRA
 cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
 lss_cmd=www_cp.sh --ls -l %(r)s %(src)s
+lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=1
 lss_dir_last=1
@@ -595,6 +604,7 @@ lss_re1 = \s*([0-9]+)\s(/.*/)(.*)(/)$
 lss_re2 = \s*([0-9]+)\s(/.*/)(.*)()$
 lss_skip=0
 lss_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "find ${srcp} -maxdepth 1 \( -type d -printf '%s %p/\n' -o -printf '%s %p\n' \)"
+lss_cmd_lists_dir=1
 ll_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "ls -l %(r)s ${srcp}"
 mv_cmd=src="%(src)s"; dst="%(dst)s"; dstp=${dst\#D0:*:} src=${src\#D0:}; srch=${src%:/*} srcp=${src/*:/}; ssh ${srch} "mv ${srcp} ${dstp}"
 chmod_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "chmod %(mode)s ${srcp}"
