getting ready to cut v2_5_5

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -483,20 +483,20 @@ pin_cmd=
 need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_SRM_EXTRA
-cp_cmd=(unset PYTHONHOME; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
-lss_cmd=unset PYTHONHOME; gfal-ls -l %(src)s
+cp_cmd=  (unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
 #lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
 lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/ 	]*)[ 	]*$
-ll_cmd=unset PYTHONHOME; gfal-ls -l %(src)s
-mv_cmd=PYTHONHOME=  PYTHONPATH= gfal-rename %(src)s %(dst)s
-chmod_cmd=unset PYTHONHOME; gfal-chmod %(mode)s %(src)s
-mkdir_cmd=unset PYTHONHOME; gfal-mkdir %(src)s
-rm_cmd=unset PYTHONHOME; gfal-rm %(src)s
-rmdir_cmd=unset PYTHONHOME; gfal-rm -r %(src)s
-pin_cmd=PYTHONHOME= srm-bring-online --lifetime=%(secs)s %(src)s
+lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
+ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
+mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
+chmod_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-chmod %(mode)s %(src)s
+mkdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-mkdir %(src)s
+rm_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm %(src)s
+rmdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm -r %(src)s
+pin_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; srm-bring-online --lifetime=%(secs)s %(src)s
 cp_r_cmd=
 
 [protocol root:]
