fun with tokens

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -583,7 +583,8 @@ need_proxy=1
 extra_env=IFDH_HTTPS_EXTRA
 extra_env2=IFDH_CURL_EXTRA
 cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
-lss_cmd=www_cp.sh --ls -l %(r)s %(src)s
+lss_cmd=www_cp.sh --ls %(src)s
+mkdir_cmd=www_cp.sh --mkdir %(src)s
 lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=1
