undo changes on master that should only have been on develop

--- a/ifdh/Makefile
+++ b/ifdh/Makefile
@@ -1,8 +1,7 @@
 SRCDIR=../../ifdh/
 VPATH=$(SRCDIR)
 
-PYTHON:=python
-PYVER:= $(shell $(PYTHON) -V | sed -e 's/\..*//')
+PYVER:= $(shell python -V | sed -e 's/\..*//')
 UNAME:= $(shell uname -s)
 ifeq ($(PYVER),Python 3) 
 SWIGOPTS=-py3
