BEARER_TOKEN_FILE handed to curl, https lss fixup

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -589,7 +589,7 @@ lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=1
 lss_dir_last=1
-lss_re1 = (/.*/)([^/]*)\s([0-9]+)\s*$
+lss_re1 = (/.*)/([^/]+/?)\s([0-9]+)\s*$
 mv_cmd=www_cp.sh --mv %(src)s %(dst)s
 cp_r_cmd=
 ll_cmd=www_cp.sh --ll %(r)s %(src)s
