tried to add rename, not working yet...

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -591,12 +591,12 @@ lss_size_last=1
 lss_dir_last=1
 lss_re1 = (/.*)/([^/]+/?)\s([0-9]+)\s*$
 mv_cmd=www_cp.sh --mv %(src)s %(dst)s
-cp_r_cmd=
-ll_cmd=www_cp.sh --ll %(r)s %(src)s
-chmod_cmd=
-rm_cmd=
-rmdir_cmd=
+ll_cmd=www_cp.sh --ll %(src)s
+rm_cmd=www_cp.sh --rm %(src)s
+rmdir_cmd=www_cp.sh --rm %(src)s
 pin_cmd=
+cp_r_cmd=
+chmod_cmd=
 
 [protocol http:]
 alias=https:
