move to gfal for more protocols

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -488,7 +488,7 @@ pin_cmd=
 need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_SRM_EXTRA
-cp_cmd=  (unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
+cp_cmd=(unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
 #lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=0
@@ -509,23 +509,21 @@ need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_ROOT_EXTRA
 extra_env2=IFDH_XROOT_EXTRA
-#cp_cmd=xrdcp –DIRedirectLimit 255 -DIRequestTimeout 14400 --tpc first --force %(extra)s %(src)s %(dst)s
-cp_cmd=xrdcp -DIRequestTimeout 14400 --tpc first --force  %(extra)s %(src)s %(dst)s
-lss_cmd=xrdwrap.sh ls -l %(src)s
-lss_cmd_lists_dir=0
+cp_cmd=(unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
+#lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-# drwx 2016-03-30 17:17:30         512 /pnfs/fnal.gov/usr/nova/scratch/users/mengel/tdest4
-lss_re1 = ([-dl])[-rwxst]{3}\s*[0-9].{18}\s*([0-9]*)\s*(.*/)([^/]*)$
-ll_cmd=xrdwrap.sh ls -l %(r)s %(src)s
-mv_cmd=xrdwrap.sh mv %(src)s %(dst)s
-chmod_cmd=xrdwrap.sh chmod %(mode)s %(src)s
-mkdir_cmd=xrdwrap.sh mkdir %(src)s
-rm_cmd=xrdwrap.sh rm %(src)s
-rmdir_cmd=xrdwrap.sh rmdir %(src)s
+lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/ 	]*)[ 	]*$
+lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
+ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
+mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
+chmod_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-chmod %(mode)s %(src)s
+mkdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-mkdir %(src)s
+rm_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm %(src)s
+rmdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm -r %(src)s
+pin_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; srm-bring-online --lifetime=%(secs)s %(src)s
 cp_r_cmd=
-pin_cmd=
 
 [protocol xroot:]
 alias=root:
@@ -582,22 +580,25 @@ strip_file_prefix=1
 need_proxy=1
 extra_env=IFDH_HTTPS_EXTRA
 extra_env2=IFDH_CURL_EXTRA
-cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
-lss_cmd=www_cp.sh --ls -l %(r)s %(src)s
-lss_cmd_lists_dir=0
+cp_cmd=(unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
+#lss_cmd_lists_dir=0
 lss_skip=0
-lss_size_last=1
-lss_dir_last=1
-lss_re1 = (/.*/)([^/]*)\s([0-9]+)\s*$
-mv_cmd=www_cp.sh --mv %(src)s %(dst)s
-cp_r_cmd=
-ll_cmd=www_cp.sh --ll %(r)s %(src)s
-chmod_cmd=
-rm_cmd=
-rmdir_cmd=
-pin_cmd=
+lss_size_last=0
+lss_dir_last=0
+lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/ 	]*)[ 	]*$
+lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
+ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
+mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
+chmod_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-chmod %(mode)s %(src)s
+mkdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-mkdir %(src)s
+rm_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm %(src)s
+rmdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm -r %(src)s
+pin_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; srm-bring-online --lifetime=%(secs)s %(src)s
 
 [protocol http:]
+alias=https:
+
+[protocol davs:]
 alias=https:
 
 [protocol D0:]
