one more ifdh.cfg tweak for ifdh ls on https:

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -582,12 +582,13 @@ extra_env=IFDH_HTTPS_EXTRA
 extra_env2=IFDH_CURL_EXTRA
 cp_cmd=(unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
 #lss_cmd_lists_dir=0
+lss_cmd_lists_dir=0
 lss_skip=0
-lss_size_last=0
-lss_dir_last=0
-lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/ 	]*)[ 	]*$
-lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
-ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
+lss_size_last=1
+lss_dir_last=1
+ll_cmd=www_cp.sh --ll %(src)s
+lss_re1 = (/.*/)([^/]*)\s([0-9]+)\s*$
+lss_cmd=www_cp.sh --ls %(src)s
 mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
 chmod_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-chmod %(mode)s %(src)s
 mkdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-mkdir %(src)s
