one more ls config tweak

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -587,7 +587,8 @@ lss_skip=0
 lss_size_last=1
 lss_dir_last=1
 ll_cmd=www_cp.sh --ll %(src)s
-lss_re1 = (/.*/)([^/]*)\s([0-9]+)\s*$
+lss_re1 = (/.*/)([^/]*)/\s([0-9]+)\s*$
+lss_re2 = (/.*/)([^/]*)\s([0-9]+)\s*$
 lss_cmd=www_cp.sh --ls %(src)s
 mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
 chmod_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-chmod %(mode)s %(src)s
