ask for Production role if wanted

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -12,9 +12,9 @@ prefixes= D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ gsift
 enabled=1
 vault_server=fermicloud346.fnal.gov
 # experiment to -i issuer mapping
-numrules=1
-match1=(.*)
-repl1=cilogon
+numrules=0
+#match1=(.*)
+#repl1=cilogon
 
 [proxies]
 enabled=1
